# Hockey-Statistics-Web-Application

./: Makefile  README.md
backend/: .static  hockey.py
backend/static/: .gitignore  script.js  wasm_frontend_bg.wasm
backend/templates/: base.html
js_frontend/: js_frontend.js
wasm_frontend/: Cargo.toml  README.md
wasm_frontend/src/: lib.rs
